# min-max-rl

./: README.org  pixi.toml  pyproject.toml
min_max_rl/: sma.py
min_max_rl/agents/: __init__.py  cdpgd.py  cdpgo.py  cgd_po.py  cgo_po.py  cvpgd.py  cvpgo.py  dpgda.py  edpg.py  eg_po.py  evpg.py  gda_po.py  vpgda.py
min_max_rl/envs/: __init__.py  utils.py
min_max_rl/envs/car_racing/: VehicleModel.py  __init__.py  config.json  cpg_main.py  env.py  main.py
min_max_rl/envs/custom_envs/: __init__.py  bilinear.py  lq_game.py
min_max_rl/envs/wrappers/: __init__.py  ma_training_wrappers.py  trajectory_id_wrapper.py  utils.py
min_max_rl/networks/: ma_deterministic_po_networks.py  ma_po_networks.py  my_networks.py
min_max_rl/scripts/: train.py
min_max_rl/training/: ma_acting.py  ma_evaluator.py  ma_gradients.py  utils.py
min_max_rl/using_pytorch/car_racing/: config.json  copg_orca.py  gda_orca.py  results.py
min_max_rl/using_pytorch/car_racing_simulator/: VehicleModel.py  config.json  cpg_main.py
min_max_rl/using_pytorch/copg_optim/: copg.py
min_max_rl/using_pytorch/lq_game/: copg_lq_game.py  gda_lq_game.py  nohup.out
min_max_rl/utils/: __init__.py  config.py
