[project]
name = "min-max-rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Tassos Manganaris"}
]
license = {text = "MIT"}
readme = "README.org"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
